crates/backyard-parser/tests/snapshots/ifs__nested.snap
---
source: crates/backyard-parser/tests/ifs.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: if
    condition:
      node_type: boolean
      is_true: false
      loc:
        start:
          line: 1
          column: 4
          offset: 4
        end:
          line: 1
          column: 4
          offset: 4
      leadings: []
      trailings: []
    valid:
      node_type: block
      statements:
        - node_type: if
          condition:
            node_type: boolean
            is_true: false
            loc:
              start:
                line: 1
                column: 16
                offset: 16
              end:
                line: 1
                column: 16
                offset: 16
            leadings: []
            trailings: []
          valid:
            node_type: block
            statements: []
            loc:
              start:
                line: 1
                column: 23
                offset: 23
              end:
                line: 1
                column: 24
                offset: 24
            leadings: []
            trailings: []
          invalid:
            node_type: else
            body:
              node_type: block
              statements: []
              loc:
                start:
                  line: 1
                  column: 38
                  offset: 38
                end:
                  line: 1
                  column: 39
                  offset: 39
              leadings: []
              trailings: []
            is_short: false
            loc:
              start:
                line: 1
                column: 26
                offset: 26
              end:
                line: 1
                column: 39
                offset: 39
            leadings: []
            trailings: []
          is_short: false
          loc:
            start:
              line: 1
              column: 12
              offset: 12
            end:
              line: 1
              column: 39
              offset: 39
          leadings: []
          trailings: []
      loc:
        start:
          line: 1
          column: 11
          offset: 11
        end:
          line: 1
          column: 40
          offset: 40
      leadings: []
      trailings: []
    invalid:
      node_type: else
      body:
        node_type: if
        condition:
          node_type: boolean
          is_true: true
          loc:
            start:
              line: 1
              column: 51
              offset: 51
            end:
              line: 1
              column: 51
              offset: 51
          leadings: []
          trailings: []
        valid:
          node_type: block
          statements: []
          loc:
            start:
              line: 1
              column: 57
              offset: 57
            end:
              line: 1
              column: 58
              offset: 58
          leadings: []
          trailings: []
        invalid: ~
        is_short: false
        loc:
          start:
            line: 1
            column: 50
            offset: 50
          end:
            line: 1
            column: 58
            offset: 58
        leadings: []
        trailings: []
      is_short: false
      loc:
        start:
          line: 1
          column: 42
          offset: 42
        end:
          line: 1
          column: 58
          offset: 58
      leadings: []
      trailings: []
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 58
        offset: 58
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 58
    offset: 58
leadings: []
trailings: []
