crates/backyard-parser/tests/snapshots/ifs__no_block.snap
---
source: crates/backyard-parser/tests/ifs.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: if
    condition:
      node_type: boolean
      is_true: false
      loc:
        start:
          line: 1
          column: 4
          offset: 4
        end:
          line: 1
          column: 4
          offset: 4
      leadings: ~
      trailings: ~
    valid:
      node_type: assignment
      left:
        node_type: variable
        name:
          node_type: identifier
          name:
            - 101
          loc:
            start:
              line: 1
              column: 11
              offset: 11
            end:
              line: 1
              column: 12
              offset: 12
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 11
            offset: 11
          end:
            line: 1
            column: 12
            offset: 12
        leadings: ~
        trailings: ~
      operator: Default
      right:
        node_type: number
        value:
          - 53
        loc:
          start:
            line: 1
            column: 16
            offset: 16
          end:
            line: 1
            column: 16
            offset: 16
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 14
          offset: 14
        end:
          line: 1
          column: 16
          offset: 16
      leadings: ~
      trailings: ~
    invalid:
      node_type: else
      body:
        node_type: if
        condition:
          node_type: boolean
          is_true: true
          loc:
            start:
              line: 1
              column: 28
              offset: 28
            end:
              line: 1
              column: 28
              offset: 28
          leadings: ~
          trailings: ~
        valid:
          node_type: assignment
          left:
            node_type: variable
            name:
              node_type: identifier
              name:
                - 101
              loc:
                start:
                  line: 1
                  column: 34
                  offset: 34
                end:
                  line: 1
                  column: 35
                  offset: 35
              leadings: ~
              trailings: ~
            loc:
              start:
                line: 1
                column: 34
                offset: 34
              end:
                line: 1
                column: 35
                offset: 35
            leadings: ~
            trailings: ~
          operator: Default
          right:
            node_type: number
            value:
              - 54
            loc:
              start:
                line: 1
                column: 39
                offset: 39
              end:
                line: 1
                column: 39
                offset: 39
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 37
              offset: 37
            end:
              line: 1
              column: 39
              offset: 39
          leadings: ~
          trailings: ~
        invalid: ~
        is_short: false
        loc:
          start:
            line: 1
            column: 27
            offset: 27
          end:
            line: 1
            column: 40
            offset: 40
        leadings: ~
        trailings: ~
      is_short: false
      loc:
        start:
          line: 1
          column: 19
          offset: 19
        end:
          line: 1
          column: 40
          offset: 40
      leadings: ~
      trailings: ~
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 40
        offset: 40
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 40
    offset: 40
leadings: ~
trailings: ~
