crates/backyard-parser/tests/snapshots/ifs__short.snap
---
source: crates/backyard-parser/tests/ifs.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: if
    condition:
      node_type: boolean
      is_true: true
      loc:
        start:
          line: 1
          column: 4
          offset: 4
        end:
          line: 1
          column: 4
          offset: 4
      leadings: []
      trailings: []
    valid:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 9
          offset: 9
        end:
          line: 1
          column: 11
          offset: 11
      leadings: []
      trailings: []
    invalid:
      node_type: else
      body:
        node_type: if
        condition:
          node_type: boolean
          is_true: false
          loc:
            start:
              line: 1
              column: 19
              offset: 19
            end:
              line: 1
              column: 19
              offset: 19
          leadings: []
          trailings: []
        valid:
          node_type: block
          statements: []
          loc:
            start:
              line: 1
              column: 25
              offset: 25
            end:
              line: 1
              column: 27
              offset: 27
          leadings: []
          trailings: []
        invalid:
          node_type: else
          body:
            node_type: block
            statements: []
            loc:
              start:
                line: 1
                column: 31
                offset: 31
              end:
                line: 1
                column: 33
                offset: 33
            leadings: []
            trailings: []
          is_short: true
          loc:
            start:
              line: 1
              column: 27
              offset: 27
            end:
              line: 1
              column: 33
              offset: 33
          leadings: []
          trailings: []
        is_short: true
        loc:
          start:
            line: 1
            column: 18
            offset: 18
          end:
            line: 1
            column: 33
            offset: 33
        leadings: []
        trailings: []
      is_short: false
      loc:
        start:
          line: 1
          column: 11
          offset: 11
        end:
          line: 1
          column: 33
          offset: 33
      leadings: []
      trailings: []
    is_short: true
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 33
        offset: 33
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 38
    offset: 38
leadings: []
trailings: []
