crates/backyard-parser/tests/snapshots/ifs__with_else_if.snap
---
source: crates/backyard-parser/tests/ifs.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: if
    condition:
      node_type: boolean
      is_true: false
      loc:
        start:
          line: 1
          column: 4
          offset: 4
        end:
          line: 1
          column: 4
          offset: 4
      leadings: []
      trailings: []
    valid:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 11
          offset: 11
        end:
          line: 1
          column: 12
          offset: 12
      leadings: []
      trailings: []
    invalid:
      node_type: else
      body:
        node_type: if
        condition:
          node_type: boolean
          is_true: true
          loc:
            start:
              line: 1
              column: 23
              offset: 23
            end:
              line: 1
              column: 23
              offset: 23
          leadings: []
          trailings: []
        valid:
          node_type: block
          statements: []
          loc:
            start:
              line: 1
              column: 29
              offset: 29
            end:
              line: 1
              column: 30
              offset: 30
          leadings: []
          trailings: []
        invalid: ~
        is_short: false
        loc:
          start:
            line: 1
            column: 22
            offset: 22
          end:
            line: 1
            column: 30
            offset: 30
        leadings: []
        trailings: []
      is_short: false
      loc:
        start:
          line: 1
          column: 14
          offset: 14
        end:
          line: 1
          column: 30
          offset: 30
      leadings: []
      trailings: []
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 30
        offset: 30
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 30
    offset: 30
leadings: []
trailings: []
